Summary of important user-visible changes for statistics 1.4.1:
-------------------------------------------------------------------
 ** update install scripts for octave 5.0 depreciated functions

 ** bug fixes to the following functions:
      pdist2.m: use max in distEucSq (Bug #50377)
      normpdf: use eps tolerance in tests (Bug #51963)
      fitgmdist: fix an output bug in fitgmdist
      t_test: Set tolerance on t_test BISTS (Bug #54557)
      gpXXXXX: change order of inputs to match matlab (Bug #54009)
      bartlett_test: df = k-1 (Bug #45894)
      gppdf: apply scale factor (Bug #54009)
      gmdistribution: updates for bug #54278, ##54279
      wishrnd: Bug #55860

Summary of important user-visible changes for statistics 1.4.0:
-------------------------------------------------------------------

 ** The following functions are new:

      canoncorr
      fitgmdist
      gmdistribution
      sigma_pts

 ** The following functions have been moved from the statistics package but are
    conditionally installed:

      mad

 ** The following functions have been moved from octave to be conditionally
    installed:

    BASE
      cloglog
      logit
      prctile
      probit
      qqplot
      table  (renamed to crosstab)

    DISTRIBUTIONS
      betacdf
      betainv
      betapdf
      betarnd
      binocdf
      binoinv
      binopdf
      binornd
      cauchy_cdf
      cauchy_inv
      cauchy_pdf
      cauchy_rnd
      chi2cdf
      chi2inv
      chi2pdf
      chi2rnd
      expcdf
      expinv
      exppdf
      exprnd
      fcdf
      finv
      fpdf
      frnd
      gamcdf
      gaminv
      gampdf
      gamrnd
      geocdf
      geoinv
      geopdf
      geornd
      hygecdf
      hygeinv
      hygepdf
      hygernd
      kolmogorov_smirnov_cdf
      laplace_cdf
      laplace_inv
      laplace_pdf
      laplace_rnd
      logistic_cdf
      logistic_inv
      logistic_pdf
      logistic_rnd
      logncdf
      logninv
      lognpdf
      lognrnd